<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/albums2"
        android:orientation="vertical"
        tools:context="com.example.android.musicalalbum.albumsActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <Button
                android:id="@+id/musics_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/MusicsButton" />

            <Button
                android:id="@+id/artists_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ArtistsButton" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play"/>
        <TextView
            android:id="@+id/album1"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor1"
            android:text="@string/Evolve"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play" />
        <TextView
            android:id="@+id/album2"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor2"
            android:text="@string/Damn"
            android:textSize="40sp" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play" />
        <TextView
            android:id="@+id/album3"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor1"
            android:text="@string/Stoney"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play" />
        <TextView
            android:id="@+id/album4"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor2"
            android:text="@string/Flicker"
            android:textSize="40sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/album5"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor1"
            android:text="@string/Lust_for_Life"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/play" />

        <TextView
            android:id="@+id/album6"
            style="@style/CategoryStyle"
            android:layout_height="wrap_content"
            android:background="@color/musicsColor2"
            android:text="@string/The_Wall"
            android:textSize="40sp" />

    </LinearLayout>
    <Button
        android:id="@+id/back"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/albums"
        android:text="Back"/>

</LinearLayout>
    </ScrollView>